--- a/vignettes/dataman2017.Rmd
+++ b/vignettes/dataman2017.Rmd
@@ -40,6 +40,12 @@ library(IlluminaHumanMethylation450kmanifest)
 library(IlluminaHumanMethylation450kanno.ilmn12.hg19)
 library(BiocStyle)
 library(GenomicFiles)
+library(GenomicAlignments)
+library(MultiAssayExperiment)
+library(RaggedExperiment)
+library(VariantAnnotation)
+library(VariantTools)
+library(ph525x)
 })
 })
 })
@@ -561,6 +567,7 @@ parsed for alignments overlapping the range.
 `readGAlignmentPairs` is used because we are dealing with
 paired end sequencing data.
 ```{r domap}
+library(GenomicAlignments)
 MAP = function(r, f) 
     readGAlignmentPairs(f, param=ScanBamParam(which=r))
 ali = reduceByRange(gf, MAP=MAP)
@@ -614,13 +621,191 @@ is found to have quiescent epigenetic state.
 
 # Managing information on large numbers of DNA variants
 
+## VCF background
+
 The most common approach to handling large numbers of
 SNP genotypes (or small indels) is in files following the
-Variant Call Format (VCF files).  The `r Biocpkg("VariantAnnotation")`
+Variant Call Format (VCF files).  Explanations of the
+format are available at [Wikipedia](https://en.wikipedia.org/wiki/Variant_Call_Format), 
+through the [spec](http://samtools.github.io/hts-specs/VCFv4.3.pdf),
+and as 
+a [diagram](http://vcftools.sourceforge.net/VCF-poster.pdf).
+The basic design is that there is a header that provides
+metadata about the contents of the VCF file, and one record per
+genomic variant.  The variant records describe the nature
+of the variant (what modifications to the reference have
+been identified) and include a field for each sample describing
+the variant configuration present.  Some variants are "called",
+others may be uncertain and in this case genotype likelihoods
+are recorded.  Variants may also be _phased_, meaning that it
+is possible to locate different variant events on a given
+chromosome. 
+
+The `r Biocpkg("VariantAnnotation")`
 package defines infrastructure for working with this format.
-Since there is a tabix indexing procedure for these, `r Biocpkg("Rsamtools")` also provides relevant infrastructure.
+Since there is a 
+[tabix](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3042176/)
+indexing procedure for these, `r Biocpkg("Rsamtools")` also provides 
+relevant infrastructure.
+
+## 1000 Genomes VCF in the cloud
+
+A very salient example of DNA variant archiving is the
+[1000 genomes project](http://www.internationalgenome.org/).
+Bioconductor's `r Biocpkg("ldblock")` package includes
+a utility that will create references to compressed,
+tabix-indexed VCF files that are maintained by the
+1000 genomes project in the Amazon cloud.
+
+```{r lkldb}
+library(ldblock)
+sta = stack1kg()
+sta
+```
+
+Note that the genome build is tagged as 'b37'.  This is
+unusual but is a feature of the metadata bound to the
+variant data in the VCF.  It cannot be changed.
+
+We would like to add information about geographic
+origin of samples in this file.  The ph525x package
+includes a table of sample information.
+
+```{r getsi}
+library(ph525x)
+data(sampInfo_1kg)
+rownames(sampInfo_1kg) = sampInfo_1kg[,1]
+cd = sampInfo_1kg[ colnames(sta), ]
+colData(sta) = DataFrame(cd)
+```
+
+
+## Importing and using VCF data
+
+We use the `readVcfStack` function from `r Biocpkg("GenomicFiles")`
+to extract content from the VCF store.  We will
+target the coding region of ORMDL3.
+
+```{r doorm, cache=TRUE}
+library(erma)
+orm = range(genemodel("ORMDL3")) # quick lookup
+genome(orm) = "b37"  # must agree with VCF
+seqlevelsStyle(orm) = "NCBI"  # use integer chromosome codes
+ormRead = readVcfStack(sta, orm)
+ormRead
+```
+
+The `CollapsedVCF` class manages the imported genotype
+data.  Information was retrieved on `r length(ormRead)`
+variants.
+We can get a clearer sense of the contents
+by transforming a subset of the result to the
+`VRanges` representation of `r Biocpkg("VariantTools")`.
+
+```{r getvr}
+library(VariantTools)
+vr = as(ormRead[,1:5], "VRanges")
+vr[1:3,]
+```
+This gives a complete representation of the contents of
+the extraction from the VCF.  To tabulate genotypes
+for a given individual:
+```{r dotabgt}
+table(vr[which(sampleNames(vr)=="HG00096"),]$GT)
+```
+
+In summary:
+
+- VCF files store variant information on cohorts and the
+VariantAnnotation package can import such files
+- Chromosome-specific VCF files can be stacked together in
+the VcfStack class
+- colData can be bound to VcfStack to coordinate information
+on sample members with their genotypes
+- The VRanges class from VariantTools can be used to generate metadata-rich
+variant-by-individual tables
 
 # Multiomics: MultiAssayExperiment, example of TCGA
 
+[The Cancer Genome Atlas](https://cancergenome.nih.gov/) is a
+collection of data from 14000 individuals, providing genomic
+information on 29 distinct tumor sites.  We can download
+curated public data on Glioblastoma Multiforme through
+an effort of Levi Waldron's lab at CUNY.  R objects of the
+`MultiAssayExperiment` class have been stored in Amazon S3,
+and a [Google Sheet](http://tinyurl.com/MAEOurls) provides details and links.
+
+Here we'll retrieve the archive on GBM.  Some software technicalities
+necessitate use of `updateObject`.
+```{r getmae, cache=TRUE}
+library(MultiAssayExperiment)
+library(RaggedExperiment)
+if (!file.exists("gbmMAEO.rds"))
+   download.file("http://s3.amazonaws.com/multiassayexperiments/gbmMAEO.rds", 
+      "gbmMAEO.rds")
+gbm = readRDS("gbmMAEO.rds")
+gbm = updateObject(gbm)
+gbm
+```
+Thus a single R variable can be used to work with `r length(experiments(gbm))`
+different assays measured on (subsets of) `r length(unique(sampleMap(gbm)$primary))` individuals.
+Constituent assays have classes ExpressionSet, SummarizedExperiment, and RaggedExperiment.
+`r Biocpkg("RaggedExperiment")` has its own package, and the vignette can be
+consulted for motivation.
+
+To get a feel for the scope and completeness of the archive for GBM,
+we can use an UpSet diagram:
+```{r doup,fig=TRUE}
+upsetSamples(gbm)
+```
+This shows that the vast majority of participants provide data on
+copy number variation and array-based expression, but much fewer provide
+RNA-seq or proteomic (RPPA, reverse-phase proteomic assay) measurements.
+
+The mutation data illustrate a basic challenge of unified representation
+of heterogeneous data.  
+
+```{r lkmu}
+mut = experiments(gbm)[["Mutations"]]
+mut
+```
+The names of the 'assays' of mutations are given in a vector of
+length 73.  These are not assays in the usual sense, but characteristics
+or contexts of mutations that may vary between individuals.
+```{r lkannnnn}
+head(assayNames(mut))
+```
+
+We tabulate the kinds of variants recorded:
+```{r lkvaa}
+table(as.character(assay(mut, "Variant_Classification")))
+```
+
+Which genes have had deletions causing frame shifts?
+```{r lkgsh}
+rfs = rowRanges(mut)[ which( apply(
+     assay(mut, "Variant_Classification"), 1, 
+       function(x) any(x=="Frame_Shift_Del"))
+     )]
+rfs
+```
+What are the genes most commonly affected by such deletions?
+```{r lksog}
+sort(table(names(rfs)),decreasing=TRUE)[1:8]
+```
+
+In summary 
+
+- MultiAssayExperiment unifies diverse assays collected on a cohort of individuals
+- TCGA tumor-specific datasets have been serialized as MultiAssayExperiments for public use
+from Amazon S3
+- Idiosyncratic data with complex annotation can be managed in RaggedAssay structures; these
+have proven useful for mutation and copy number variants
+
+
 # Cloud-oriented management strategies: CGC and GDC concepts
 
+In the previous section we indicated how the TCGA data on a tumor can be collected
+in a coherent object that unifies numerous genomic assays.  In this section we
+want to illustrate how the complete data from the TCGA can be accessed for
+interactive analysis through a single R connection object.
